2012-02-16  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.builder.php: Fixed creation alerts 
	modules combo where appears all the modules (not init included)

2012-02-15  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_field_match_snmp.php: Added a new help file.
	
2012-02-14  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/events/events_list: Display all fields including 
	empty values.

2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Migrate 
	tconfig ACL list. Pending to change it in Oracle.

2012-02-14  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: uploaded lost lines to repository. I am sorry.

2012-02-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php, godmode/setup/setup.php
	extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql: fixed the list of ACL ip in
	the table tconfig, before the data was in several rows, now it is in one
	row, and of course I have made in the SQL for the migration.
	
	Fixes: #3486496

2012-02-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: fixed function "check_refererer" when the http
	server run in other port instead the normally 80 port.
	
	Fixes: #3452474

2012-02-14  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: updated build & version.

	* operation/search_agents.php: Fixed bug: icon to manage agent

	* operation/search_results.php: Fixed bug: search with blank spaces,
	again another HTML entity problem :(

2012-02-14  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Added get_all_alert_templates
	function to API.

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the resize
	background.
	
	Fixes: #3483645

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style, and fixed the