@@ -1,3 +1,8 @@
+2012-02-16  Vanessa Gil  <vanessa.gil@artica.es>
+	* include/functions_events.php 
+	  operation/events/events_list: In event list: display always user name, 
+	changed buttons, changed event type.
+
 2012-02-16  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/alerts/alert_list.builder.php: Fixed creation alerts 
